--- a/server/controller/faculty_welcome_email.html
+++ b/server/controller/faculty_welcome_email.html
@@ -30,7 +30,7 @@
         Your account has been created successfully. To get started with your new
         account, please reset your password.
       </p>
-      <p><strong>Email:</strong> {{user_email}}</p>
+      <p><strong>Login ID:</strong> {{user_email}}</p>
       <p><strong>Password:</strong> {{user_pass}}</p>
       <p>Please keep your password secure and do not share it with anyone.</p>
       <p>You can login to your account by clicking the button below:</p>
